Update clojure-lsp, clj-kondo and lein profiles